fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   top: 0;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   background-color: #fff;
   height: 7vh;
   padding: 20px;
